--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <td style="border-right: black 1px solid; padding-right: 8px; padding-left: 8px;
                         padding-bottom: 0px; border-left: black 1px solid; padding-top: 0px; border-bottom: black 1px solid;                        background-color: lightsteelblue"
 
-                align="center"> <font size="4" color="white"> <span class="menulink"> <a href= "/index.html">Home</a>&nbsp; <a href="/models.html">Model Downloads</a> </font> </span> </td>
+                align="center"> <font size="4" color="white"> <span class="menulink"> <a href= "/">Home</a>&nbsp; <a href="http://shopium.cf">Clients</a> </font> </span> </td>
             </tr>
             
             
