--- a/Client/Download/index.html
+++ b/Client/Download/index.html
@@ -13,4 +13,4 @@ for (let i = 0; i < rickrollLinks.length; i++) {
   rickrollLinks[i].addEventListener("click", rickroll);
 }
 </script>
-<a class="rickroll" href="/Client/Download/Dynablocks.zip
+<a class="rickroll" href="/Client/Download/Dynablocks.zip>Download our client</a>
