--- a/Client/Download/index.html
+++ b/Client/Download/index.html
@@ -1,3 +1,15 @@
+
+
+
+
+<html><head>
+	<meta charset="utf-8">
+  <title>Download</title>
+</head>
+
+<body>
+	<a href="/Client/Download/Dynablocks.zip" class="rickroll" title="click me!">Download Our Client!</a>
+
 <script>
 const rickroll = function (event) { 
   event.preventDefault(); 
@@ -13,4 +25,5 @@ for (let i = 0; i < rickrollLinks.length; i++) {
   rickrollLinks[i].addEventListener("click", rickroll);
 }
 </script>
-<a href="/Client/Download/Dynablocks.zip" class="rickroll" >Download our client</a>
+
+</body></html>
